included initial prototype of html, css and flipcard js function

--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,23 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <header>
+      <h1 class="game-title">MEMORY GAME</h1>
+    </header>
+    <section class="memory-game">
+      <div class="memory-card">
+        <img class="front-face" src="https://simpleicons.org/icons/javascript.svg" alt="cartaone"/>
+        <img class="back-face" src="images/backcard.png" alt="backcard"/>
+      </div>
+      <div class="memory-card">
+        <img class="front-face" src="https://simpleicons.org/icons/javascript.svg" alt="cartaone"/>
+        <img class="back-face" src="images/backcard.png" alt="backcard"/>
+      </div>
+
+     
+    </section>
     <div id="root"></div>
     <script src="main.js" type="module"></script>
   </body>
 </html>
+
