added cards images

--- a/src/index.html
+++ b/src/index.html
@@ -11,11 +11,11 @@
     </header>
     <section class="memory-game">
       <div class="memory-card">
-        <img class="front-face" src="images/earth.png" alt="cartaone"/>
+        <img class="front-face" src="images/earth.png" alt="earth"/>
         <img class="back-face" src="images/backcard.png" alt="backcard"/>
       </div>
       <div class="memory-card">
-        <img class="front-face" src="images/earth.png" alt="cartaone"/>
+        <img class="front-face" src="images/earth.png" alt="earth"/>
         <img class="back-face" src="images/backcard.png" alt="backcard"/>
       </div>
 
