--- a/src/index.html
+++ b/src/index.html
@@ -7,20 +7,11 @@
   </head>
   <body>
     <header>
-      <h1 class="game-title">MEMORY GAME</h1>
-    </header>
-    <section class="memory-game">
-      <div class="memory-card">
-        <img class="front-face" src="images/earth.png" alt="earth"/>
-        <img class="back-face" src="images/backcard.png" alt="backcard"/>
-      </div>
-      <div class="memory-card">
-        <img class="front-face" src="images/earth.png" alt="earth"/>
-        <img class="back-face" src="images/backcard.png" alt="backcard"/>
-      </div>
-
-     
+      <h1 class="game-title">SPACE MEMORY GAME</h1> 
+      </header>
+    <section class="memory-game"> 
     </section>
+    
     <div id="root"></div>
     <script src="main.js" type="module"></script>
   </body>
