--- a/src/index.html
+++ b/src/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Memory Match</title>
     <link rel="stylesheet" href="style.css" />
   </head>
@@ -9,9 +10,7 @@
     <header>
       <h1 class="game-title">SPACE MEMORY GAME</h1> 
       </header>
-    <section class="memory-game"> 
-    </section>
-    
+       
     <div id="root"></div>
     <script src="main.js" type="module"></script>
   </body>
