add footer html and css

--- a/src/index.html
+++ b/src/index.html
@@ -13,6 +13,9 @@
        
     <div id="root"></div>
     <script src="main.js" type="module"></script>
+    <footer>
+      <p>Tamara Goncalves</p>
+    </footer>
   </body>
 </html>
 
